test/invalid/test2.sl
integer if; // Error: 'if' is a reserved keyword.